--- a/Academik/app/src/main/res/layout/fragment_perfil_edit.xml
+++ b/Academik/app/src/main/res/layout/fragment_perfil_edit.xml
@@ -85,6 +85,14 @@
             android:textSize="24sp"
             android:text="Guardar" />
 
+        <TextView
+            android:id="@+id/msgActPerfil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:text="" />
+
     </LinearLayout>
 
 
