--- a/Academik/app/src/main/res/layout/fragment_cursos_datos.xml
+++ b/Academik/app/src/main/res/layout/fragment_cursos_datos.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -9,13 +9,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingRight="4px">
-
         <TextView
             android:id="@+id/tvCurso"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp" />
-
+            android:textStyle="bold"
+            android:layout_margin="10dp"
+            android:paddingLeft="5dp"
+            android:textColor="@color/color_01"
+            android:textSize="18dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -23,18 +25,22 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingBottom="5dp">
-
         <TextView
             android:id="@+id/tvProfesorNombre"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_mi_perfil"
             android:padding="3dp"
-            android:textSize="16dp" />
-
+            android:layout_marginLeft="10dp"
+            android:textColor="#000"
+            android:textSize="14dp" />
         <TextView
             android:id="@+id/tvProfesorCorreo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_email"
+            android:padding="3dp"
+            android:textColor="#000"
             android:textSize="14dp" />
     </LinearLayout>
 
