--- a/Academik/app/src/main/res/layout/fragment_comunicados_datos.xml
+++ b/Academik/app/src/main/res/layout/fragment_comunicados_datos.xml
@@ -8,33 +8,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingRight="4px">
+        android:layout_margin="5dp">
         <TextView
             android:id="@+id/tvComunicadoFecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="3dp"
-            android:textSize="16dp" />
-
+            android:padding="5dp"
+            android:text="10/10/2020"
+            android:drawableLeft="@drawable/ic_calendar"
+            android:textSize="14dp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp">
 
         <TextView
             android:id="@+id/tvComunicadoTitulo"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="3dp"
-            android:textSize="20dp" />
+            android:padding="5dp"
+            android:text="Titulo"
+            android:textStyle="bold"
+            android:textColor="@color/color_01"
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/tvComunicadoDescripcion"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Texto"
             android:textSize="14dp" />
     </LinearLayout>
 
