--- a/Academik/app/src/main/res/layout/fragment_perfil_edit.xml
+++ b/Academik/app/src/main/res/layout/fragment_perfil_edit.xml
@@ -1,88 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="60dp">
-
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
+
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            app:srcCompat="@android:mipmap/sym_def_app_icon" />
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <Button
+            android:id="@+id/btnUploadGalery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:drawableLeft="@drawable/ic_edit"
+            app:icon="@drawable/ic_save"
+            android:layout_gravity="center"
+            android:backgroundTint="#FFF"
+            android:textStyle="bold"
+            android:textColor="#A9A9A9"
+            android:text="Galeria" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/tv_file_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Codigo Alumno" />
-
-        <EditText
-            android:id="@+id/etCodigoAlumno"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:enabled="false"
-            android:inputType="textPersonName"
+            android:layout_gravity="center"
             android:text="" />
 
-        <TextView
-            android:id="@+id/textView3"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nombres y Apellidos" />
+            android:hint="Codigo"
+            app:startIconDrawable="@drawable/ic_codigo"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+            <EditText
+                android:id="@+id/etCodigoAlumno"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:textColor="#000"
+                android:enabled="false"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/etNombre"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:enabled="false"
-            android:text="" />
+            android:hint="Nombre"
+            app:startIconDrawable="@drawable/ic_mi_perfil"
+            app:startIconContentDescription="Nombre"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+            <EditText
+                android:id="@+id/etNombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:textColor="#000"
+                android:enabled="false"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textView4"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Telefono" />
+            android:hint="Telefono"
+            app:startIconDrawable="@drawable/ic_mi_contacto"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+            <EditText
+                android:id="@+id/etTelefono"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:background="#FFF"
+                android:textColor="#000"
+                android:enabled="true"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/etTelefono"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="phone"
-            android:enabled="true"
-            android:text="" />
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Correo" />
-
-        <EditText
-            android:id="@+id/etCorreo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="true"
-            android:ems="10"
-            android:inputType="textEmailAddress"
-            android:text="" />
+            android:hint="Correo electronico"
+            app:startIconDrawable="@drawable/ic_email"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+            <EditText
+                android:id="@+id/etCorreo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="true"
+                android:background="#FFF"
+                android:textColor="#000"
+                android:inputType="textEmailAddress"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnSave"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#000000"
-            android:textSize="24sp"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            app:icon="@drawable/ic_save"
+            android:layout_marginTop="10dp"
             android:text="Guardar" />
 
         <TextView
@@ -90,10 +125,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textAlignment="center"
-            android:text="" />
+            android:layout_marginTop="20dp"
+            android:textColor="#C51A1A" />
 
     </LinearLayout>
 
-
+    </ScrollView>
 </LinearLayout>
