--- a/Academik/app/src/main/res/layout/fragment_ubicanos.xml
+++ b/Academik/app/src/main/res/layout/fragment_ubicanos.xml
@@ -7,13 +7,11 @@
     android:orientation="vertical"
     android:paddingTop="60dp">
 
+<com.google.android.gms.maps.MapView
+    android:id="@+id/map_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_map" />
+</com.google.android.gms.maps.MapView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
